swagger full complete
